[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/AlleyFloor.png" type="Texture" id=2]
[ext_resource path="res://arm.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://assets/Marlboro.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]
[ext_resource path="res://Pin.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/background.png" type="Texture" id=9]
[ext_resource path="res://assets/GameSoundtrack.wav" type="AudioStream" id=10]
[ext_resource path="res://AudioStreamPlayer.gd" type="Script" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 140, 140, 0, 140, 0, 0, 140, 0 )

[sub_resource type="TileSet" id=2]
0/name = "AlleyFloor.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 140, 140 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 845.01, 146.745, 0, 0, 0, 0, 945.397, 311.559, 0, 0, 0, 0, 838.99, 146.882, 0, 0, 0, 0, 744.602, 38.3368, 0, 0, 0, 0, 943.76, 35.5051, 0, 0, 0, 0, 844.653, 145.938, 0, 0, 0, 0, 845.01, 146.745, 0, 0, 0, 0, 703.226, 240.934, 0, 0, 0, 0, 564.437, 139.225, 0, 0, 0, 0, 672.502, 102.144, 0, 0, 0, 0, 735.01, 320.394, 0, 0, 0, 0, 826.124, 225.042, 0, 0, 0, 0, 945.843, 308.739, 0, 0, 0, 0, 845.01, 146.745 )
}

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 5 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 140, 140 )
format = 1
tile_data = PoolIntArray( 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0 )

[node name="Arm" parent="." instance=ExtResource( 3 )]
position = Vector2( 88.0849, 412.777 )
z_index = 2

[node name="BallStartPos" type="Position2D" parent="."]
position = Vector2( 71.3524, 448.331 )

[node name="PinPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="PinPath"]
position = Vector2( 801.332, 175.761 )
rotation = 2.20019
offset = 919.56
rotate = false

[node name="Pin" parent="PinPath/PathFollow2D" instance=ExtResource( 8 )]
position = Vector2( 3.35516, -20.4953 )
rotation = 4.06313
collision_layer = 2147483655
collision_mask = 8
mass = 2.55102
gravity_scale = 15.0
contacts_reported = 5

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Message" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.5
margin_top = -72.0
margin_right = 295.5
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.00784314, 0.00784314, 1 )
text = "Pins of Fury"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -233.0
margin_right = 233.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -96.0
margin_right = 113.0
custom_fonts/font = SubResource( 6 )
text = "Begin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthMeter" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 41.0122
margin_top = -89.6752
margin_right = 81.0122
margin_bottom = -44.6752
custom_fonts/font = SubResource( 7 )
text = "Power: MEDIUM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Directions" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "Use left and right arrows to aim. 
Use up and down arrows to adjust strength.
Use space to fire!
Press R to reload"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallCount" type="Label" parent="HUD"]
margin_left = 40.0
margin_top = 240.0
margin_right = 169.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 9 )
text = "Ball Count: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 0
margin_top = -1.931
margin_right = 1024.0
margin_bottom = 598.069
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -16.155
autoplay = true
script = ExtResource( 11 )
[connection signal="body_entered" from="PinPath/PathFollow2D/Pin" to="." method="_on_Pin_body_entered"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_AudioStreamPlayer_finished"]
